Use @Contended