@@ -12,7 +12,10 @@ repositories {
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(19)
+		// Due to https://bugs.openjdk.org/browse/JDK-8178152 using
+		// --release, which languageVersion sets, and --add-exports
+		// together is not supported.
+		//languageVersion = JavaLanguageVersion.of(19)
 	}
 }
 
@@ -28,7 +31,7 @@ dependencies {
 // https://users.scala-lang.org/t/gradle-7-6-jdk-19-and-scala-3-java-lang-classnotfoundexception-scala-predef-even-though-scala-library-2-13-10-jar-is-in-classpath/8972/7?u=flow
 modularity.patchModule("org.scala.lang.scala3.library", "scala-library-2.13.10.jar")
 
-def ENABLE_PREVIEW = "--enable-preview"
+import eu.geekplace.beanstalk.BuildConstants
 
 testing {
 	suites {
@@ -37,7 +40,7 @@ testing {
 			targets.all {
 				testTask.configure {
 					// https://stackoverflow.com/a/72905390/194894
-					jvmArgs(ENABLE_PREVIEW)
+					jvmArgs(BuildConstants.EXTRA_JVM_ARGS)
 				}
 			}
 		}
@@ -45,14 +48,13 @@ testing {
 }
 
 tasks.withType(JavaCompile) {
-	options.compilerArgs += [
-		ENABLE_PREVIEW,
+	options.compilerArgs += BuildConstants.EXTRA_JAVAC_ARGS + [
 		"-Xlint:preview",
 	]
 }
 
 tasks.withType(JavaExec) {
-	jvmArgs.add(ENABLE_PREVIEW)
+	jvmArgs += BuildConstants.EXTRA_JVM_ARGS
 }
 
 checkstyle {
